--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -289,6 +289,49 @@ spec:
         maxDuration: 3m
 
 ---
+# Application: UniFi Controller
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: app-unifi-controller
+  namespace: default
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"  # Install after infrastructure (needs storage)
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io/background
+spec:
+  project: application
+  sources:
+    - repoURL: https://qonstrukt.github.io/helm-charts
+      chart: unifi-controller
+      targetRevision: 2.6.1
+      helm:
+        valueFiles:
+          - $values/gitops/apps/unifi-controller/values.yaml
+    - repoURL: https://github.com/amerenda/amerenda-k3s.git
+      targetRevision: main
+      ref: values
+    - repoURL: https://github.com/amerenda/amerenda-k3s.git
+      targetRevision: main
+      path: gitops/apps/unifi-controller
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: unifi-controller
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+      - PrunePropagationPolicy=foreground
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
