--- a/gitops/apps/home-assistant/calendar-script-configmap.yaml
+++ b/gitops/apps/home-assistant/calendar-script-configmap.yaml
@@ -13,11 +13,6 @@ data:
     CALENDAR_URL="https://outlook.office365.com/owa/calendar/96b4509ebff1403fb979cc5d1a19b192@jainglobal.com/2ba2f72869cd482e99af95f77b227b7e17421443293132355961/calendar.ics"
     OUTPUT_FILE="/config/.storage/local_calendar.work.ics"
     TEMP_FILE="${OUTPUT_FILE}.tmp"
-    FILTERED_FILE="${OUTPUT_FILE}.filtered"
-    
-    # Date range for filtering (1 year in past, 2 years in future)
-    PAST_DAYS=365
-    FUTURE_DAYS=730
     
     # Ensure .storage directory exists
     mkdir -p /config/.storage
@@ -28,29 +23,20 @@ data:
     if curl -f -s -S --max-time 30 -o "${TEMP_FILE}" "${CALENDAR_URL}"; then
         # Verify it's a valid ICS file (check for BEGIN:VCALENDAR)
         if head -n 1 "${TEMP_FILE}" | grep -q "BEGIN:VCALENDAR"; then
-            echo "[Calendar-Cache] Filtering calendar events to reduce size (past ${PAST_DAYS} days, future ${FUTURE_DAYS} days)..."
-            
-            # Use Python to filter events by date range
-            python3 /scripts/filter_calendar.py "${TEMP_FILE}" "${FILTERED_FILE}" "${PAST_DAYS}" "${FUTURE_DAYS}" || {
-                echo "[Calendar-Cache] WARNING: Date filtering failed, using full calendar file"
-                cp "${TEMP_FILE}" "${FILTERED_FILE}"
-            }
-            
-            # Move filtered file to final location atomically
-            mv "${FILTERED_FILE}" "${OUTPUT_FILE}"
-            rm -f "${TEMP_FILE}"
+            # Move file to final location atomically
+            mv "${TEMP_FILE}" "${OUTPUT_FILE}"
             
             echo "[Calendar-Cache] Successfully downloaded and cached calendar to ${OUTPUT_FILE}"
             # Show file size for verification
             ls -lh "${OUTPUT_FILE}"
         else
             echo "[Calendar-Cache] ERROR: Downloaded file does not appear to be a valid ICS file"
-            rm -f "${TEMP_FILE}" "${FILTERED_FILE}"
+            rm -f "${TEMP_FILE}"
             exit 1
         fi
     else
         echo "[Calendar-Cache] ERROR: Failed to download calendar from ${CALENDAR_URL}"
-        rm -f "${TEMP_FILE}" "${FILTERED_FILE}"
+        rm -f "${TEMP_FILE}"
         exit 1
     fi
   filter_calendar.py: |
