--- a/gitops/apps/unifi-controller/values.yaml
+++ b/gitops/apps/unifi-controller/values.yaml
@@ -4,5 +4,27 @@
 persistence:
   enabled: true
   storageClass: longhorn
+  accessModes: [ReadWriteMany]
   size: 8Gi
+  backup:
+    enabled: false
 
+# Ingress Configuration
+ingress:
+  enabled: true
+  className: "infra-traefik"
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    external-dns.alpha.kubernetes.io/hostname: unifi.amer.home
+    external-dns.alpha.kubernetes.io/ttl: "3600"
+    external-dns.alpha.kubernetes.io/manage-record-types: "A"
+  hosts:
+    - host: unifi.amer.home
+      paths:
+        - path: /
+          pathType: Prefix
+  tls:
+    - secretName: unifi-controller-tls
+      hosts:
+        - unifi.amer.home
