--- a/gitops/apps/home-assistant/configuration/dashboards/dean.yaml
+++ b/gitops/apps/home-assistant/configuration/dashboards/dean.yaml
@@ -24,14 +24,52 @@ strategy:
         hidden: "{{ is_state('switch.living_room_privacy_mode', 'on') }}"
       # Hide light groups that only contain one member (to prevent duplicates)
       # Example: light.living_room group containing only light.fixture
-      # Check entity_id attribute which contains the list of member entities
-      # expand() includes the group itself, so we check attributes directly
+      # Try multiple methods to check group membership since different group types store members differently
       light.living_room:
-        hidden: "{{ (state_attr('light.living_room', 'entity_id') | default(state_attr('light.living_room', 'all_lights')) | default([]) | list | length) == 1 if (state_attr('light.living_room', 'entity_id') | default(state_attr('light.living_room', 'all_lights')) | default([])) is iterable else false }}"
+        hidden: >
+          {% set attr_entities = state_attr('light.living_room', 'entity_id') | default([]) %}
+          {% set expanded = expand('light.living_room') | list %}
+          {% set expanded_ids = expanded | map(attribute='entity_id') | list %}
+          {# Check if expanded list excludes the group itself and has only 1 member #}
+          {% set members_only = expanded_ids | reject('eq', 'light.living_room') | list %}
+          {% if attr_entities is iterable and attr_entities is not string and attr_entities | list | length > 0 %}
+            {{ (attr_entities | list | length) == 1 }}
+          {% elif members_only | length == 1 %}
+            true
+          {% elif expanded | length == 2 %}
+            {# expand() includes the group itself, so 2 items means group + 1 member #}
+            true
+          {% else %}
+            false
+          {% endif %}
       light.bathroom:
-        hidden: "{{ (state_attr('light.bathroom', 'entity_id') | default(state_attr('light.bathroom', 'all_lights')) | default([]) | list | length) == 1 if (state_attr('light.bathroom', 'entity_id') | default(state_attr('light.bathroom', 'all_lights')) | default([])) is iterable else false }}"
+        hidden: >
+          {% set attr_entities = state_attr('light.bathroom', 'entity_id') | default([]) %}
+          {% set expanded = expand('light.bathroom') | list %}
+          {% if attr_entities is iterable and attr_entities is not string and attr_entities | list | length > 0 %}
+            {{ (attr_entities | list | length) == 1 }}
+          {% elif expanded | length > 1 %}
+            {{ expanded | length == 2 }}
+          {% else %}
+            false
+          {% endif %}
       light.hallway:
-        hidden: "{{ (state_attr('light.hallway', 'entity_id') | default(state_attr('light.hallway', 'all_lights')) | default([]) | list | length) == 1 if (state_attr('light.hallway', 'entity_id') | default(state_attr('light.hallway', 'all_lights')) | default([])) is iterable else false }}"
+        hidden: >
+          {% set attr_entities = state_attr('light.hallway', 'entity_id') | default([]) %}
+          {% set expanded = expand('light.hallway') | list %}
+          {% set expanded_ids = expanded | map(attribute='entity_id') | list %}
+          {# Check if expanded list excludes the group itself and has only 1 member #}
+          {% set members_only = expanded_ids | reject('eq', 'light.hallway') | list %}
+          {% if attr_entities is iterable and attr_entities is not string and attr_entities | list | length > 0 %}
+            {{ (attr_entities | list | length) == 1 }}
+          {% elif members_only | length == 1 %}
+            true
+          {% elif expanded | length == 2 %}
+            {# expand() includes the group itself, so 2 items means group + 1 member #}
+            true
+          {% else %}
+            false
+          {% endif %}
       light.bedroom:
         hidden: >
           {% set group_entities = state_attr('light.bedroom', 'entity_id') | default([]) %}
@@ -58,22 +96,27 @@ strategy:
             - filter:
                 state: unavailable
       # Domain-level filtering for lights - hide groups that only contain one member
+      # Note: This uses template filter which may not work for all group types
+      # The card_options approach above should handle most cases
       light:
         exclude:
           entities:
-            # Hide light groups that only have one member (to prevent duplicates)
+            # Exclude light groups that only have one member
             - filter:
-                # Check if entity has entity_id attribute (indicating it's a group)
-                # and if that attribute is a list with exactly one item
+                entity_id: "light.living_room"
                 template: >
-                  {% set entity_id = entity.entity_id %}
-                  {% if entity_id is defined %}
-                    {% set group_entities = state_attr(entity_id, 'entity_id') | default([]) %}
-                    {% if group_entities is iterable and group_entities is not string %}
-                      {{ (group_entities | list | length) == 1 }}
-                    {% else %}
-                      {{ false }}
-                    {% endif %}
+                  {% set group_entities = state_attr('light.living_room', 'entity_id') | default([]) %}
+                  {% if group_entities is iterable and group_entities is not string %}
+                    {{ (group_entities | list | length) == 1 }}
+                  {% else %}
+                    {{ false }}
+                  {% endif %}
+            - filter:
+                entity_id: "light.hallway"
+                template: >
+                  {% set group_entities = state_attr('light.hallway', 'entity_id') | default([]) %}
+                  {% if group_entities is iterable and group_entities is not string %}
+                    {{ (group_entities | list | length) == 1 }}
                   {% else %}
                     {{ false }}
                   {% endif %}
