--- a/gitops/apps/unifi-controller/values.yaml
+++ b/gitops/apps/unifi-controller/values.yaml
@@ -10,20 +10,6 @@ persistence:
     enabled: false
 
 # Ingress Configuration
+# Disabled - using IngressRouteTCP for TLS passthrough (standard Ingress doesn't support passthrough)
 ingress:
-  enabled: true
-  className: "infra-traefik"
-  annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.tls.passthrough: "true"
-    external-dns.alpha.kubernetes.io/hostname: unifi.amer.home
-    external-dns.alpha.kubernetes.io/ttl: "3600"
-    external-dns.alpha.kubernetes.io/manage-record-types: "A"
-  hosts:
-    - host: unifi.amer.home
-      paths:
-        - path: /
-          pathType: Prefix
-  tls:
-    - hosts:
-        - unifi.amer.home
+  enabled: false
