--- a/gitops/apps/unifi-controller/ingressroute-tcp.yaml
+++ b/gitops/apps/unifi-controller/ingressroute-tcp.yaml
@@ -1,7 +1,7 @@
 ---
 # IngressRouteTCP for UniFi Controller with TLS Passthrough
 # Standard Ingress resources don't support TLS passthrough, so we use IngressRouteTCP
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRouteTCP
 metadata:
   name: unifi-controller-tcp
